--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "github-webhook-handler": "^0.7.1",
-    "koa": "^2.8.1"
+    "koa": "^2.8.1",
+    "koa-router": "^7.4.0"
   }
 }
